--- a/_data/take5/GYM-5029.yml
+++ b/_data/take5/GYM-5029.yml
@@ -7,14 +7,14 @@ url: /courses/take5/GYM-5029/
 poster_art: /img/take5/posters/gym-5029.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "UX"
 subtopics:
   - label: "Prototyping"
 video_ID: LnPEGhE90r4
 video_duration: "4:57"
 featured: false
-short_description: "Build and animate a prototype for a simple microinteraction in Figma in this tutorial by Jeremy Osborn, Academic Director at Aquent Gymnasium."
+short_description: "Build and animate a prototype for a simple microinteraction in Figma in this tutorial."
 project_file_source: GitHub
 project_files:
 - label: "Lesson Files"
