--- a/_data/take5/GYM-5028.yml
+++ b/_data/take5/GYM-5028.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5028/
 poster_art: /img/take5/posters/gym-5028.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "Development"
 video_ID: VYhPXZvAD9k
 video_duration: "4:57"
 featured: false
-short_description: "Learn how to create a theme for your dark mode users in this tutorial by Jeremy Osborn, Academic Director at Aquent Gymnasium."
+short_description: "Learn how to create a theme for your dark mode users in this tutorial."
 project_file_source: CodePen
 project_files:
 - label: "Starting Project"
