--- a/_data/take5/GYM-5016.yml
+++ b/_data/take5/GYM-5016.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5016/
 poster_art: /img/take5/posters/gym-5016.jpg
 live: true
 instructor: "Lee Andrese"
-instructor_bio: ""
+instructor_bio: "Principal of Akatheme"
 topic: "Career Skills"
 video_ID: 3WVDdGssP6Y
 video_duration: "4:35"
 featured: false
-short_description: "Learn how to tell your story in a compelling way in order to advance your career in this tutorial with Lee Andrese, Principal of Akatheme."
+short_description: "Learn how to tell your story in a compelling way in order to advance your career in this tutorial."
 related_content:
 - label: "The Psychological Power of Storytelling by Pamela B. Rutledge"
   url: "https://www.psychologytoday.com/us/blog/positively-media/201101/the-psychological-power-storytelling"
