--- a/_data/take5/GYM-5025.yml
+++ b/_data/take5/GYM-5025.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5025/
 poster_art: /img/take5/posters/gym-5025.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "Development"
 video_ID: ZLR0rLm_zEM
 video_duration: "4:57"
 featured: false
-short_description: "Learn how CSS Variables can help you speed up and simplify your development workflow in this tutorial by Jeremy Osborn, Academic Director of Aquent Gymnasium."
+short_description: "Learn how CSS Variables can help you speed up and simplify your development workflow in this tutorial."
 project_file_source: CodePen
 project_files:
 - label: "Starting Project"
