--- a/_data/take5/GYM-5019.yml
+++ b/_data/take5/GYM-5019.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5019/
 poster_art: /img/take5/posters/gym-5019.jpg
 live: true
 instructor: "Anne Ditmeyer"
-instructor_bio: ""
+instructor_bio: "Creative Coach"
 topic: "Career Skills"
 video_ID: m1vO-v2UGmk
 video_duration: "4:13"
 featured: false
-short_description: "Learn how to promote yourself via your website and social media in this tutorial with Anne Ditmeyer, creative coach."
+short_description: "Learn how to promote yourself via your website and social media in this tutorial."
 related_content:
 - label: "Owltastic - Portfolio site by Meagan Fisher"
   url: "https://owltastic.com"
