--- a/_data/take5/GYM-5020.yml
+++ b/_data/take5/GYM-5020.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5020/
 poster_art: /img/take5/posters/gym-5020.jpg
 live: true
 instructor: "Lee Andrese"
-instructor_bio: ""
+instructor_bio: "Principal of Akatheme"
 topic: "Career Skills"
 video_ID: CWHSqE5Es4c
 video_duration: "4:59"
 featured: false
-short_description: "Learn how to increase opportunities by understanding the types of audiences you can expect to encounter in this tutorial with Lee Andrese, Principal of Akatheme."
+short_description: "Learn how to increase opportunities by understanding the types of audiences you can expect to encounter in this tutorial."
 related_content:
 - label: "How to Use Stories to Win Over Others by Jennifer Aker"
   url: "https://leanin.org/education/harnessing-the-power-of-stories"
