--- a/_data/take5/GYM-5024.yml
+++ b/_data/take5/GYM-5024.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5024/
 poster_art: /img/take5/posters/gym-5024.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "Development"
 video_ID: Xb3pBj4PKxg
 video_duration: "4:59"
 featured: false
-short_description: "Learn how to add CSS Media Queries in order to get started with responsive web design in this tutorial by Jeremy Osborn, Academic Director of Aquent Gymnasium."
+short_description: "Learn how to add CSS Media Queries in order to get started with responsive web design in this tutorial."
 project_file_source: CodePen
 project_files:
 - label: "Starting Project"
