--- a/_data/take5/GYM-5023.yml
+++ b/_data/take5/GYM-5023.yml
@@ -7,14 +7,14 @@ url: /courses/take5/GYM-5023/
 poster_art: /img/take5/posters/gym-5023.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "Design"
 subtopics:
   - label: "Development"
 video_ID: 1430bmqJ9xw
 video_duration: "4:57"
 featured: false
-short_description: "Learn how to create a pleasing analogous color scheme using the HSL color system with this tutorial by Jeremy Osborn, Academic Director of Aquent Gymnasium."
+short_description: "Learn how to create a pleasing analogous color scheme using the HSL color system with this tutorial."
 project_file_source: CodePen
 project_files:
 - label: "Starting Project"
