--- a/_data/take5/GYM-5022.yml
+++ b/_data/take5/GYM-5022.yml
@@ -7,12 +7,12 @@ url: /courses/take5/GYM-5022/
 poster_art: /img/take5/posters/gym-5022.jpg
 live: true
 instructor: "Jeremy Osborn"
-instructor_bio: ""
+instructor_bio: "Director of Learning at Aquent Gymnasium"
 topic: "Design"
 video_ID: fOP3xEY77bc
 video_duration: "4:57"
 featured: false
-short_description: "Learn how to create a pixel perfect icon in Sketch whose edges remain sharp in any scenario with this tutorial by Jeremy Osborn, Academic Director of Aquent Gymnasium."
+short_description: "Learn how to create a pixel perfect icon in Sketch whose edges remain sharp in any scenario with this tutorial."
 project_file_source: GitHub
 project_files:
 - label: "Lesson Files"
