--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -9,7 +9,7 @@ live_stream: true
 # Source
 # Set twitch/youtube (lowercase)
 # Note: As a fallback, the current promo displays if a typo/erroneous/null source value is set
-source: "youtube"
+source: "twitch"
 
 # Content
 # Update per live stream, if needed.
