--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -26,12 +26,16 @@ twitch_layout: "video"
 twitch_theme: "dark"
 
 # youtube
-youtube_channel: "live_stream?channel="
-youtube_channel_ID: "UCcSnI3n2Jd-2qgncC6k_S1g"
-# Note: Set a video ID to override live stream channel, if needed
-# Example video ID: bQ-NdoBzd1A
 youtube_video_ID: ""
 
 # Aspect Ratio 16:19
 embed_width: "854"
 embed_height: "400"
+
+# Options
+embed_allowfullscreen: true
+embed_auto_play: false
+embed_fetchpriority: "high"
+embed_loading: "eager"
+embed_frameborder: "0"
+embed_scrolling: "0"
