--- a/_data/courses-page.yml
+++ b/_data/courses-page.yml
@@ -7,12 +7,30 @@ main:
 full_courses:
   format: "Full Courses"
   short_description: "Full Courses include a series of video lessons, optional quizzes and assignments, and a final exam and certificate if you pass. Plus, a forum to share work and get feedback from students and teaching assistants."
-short_courses:
+  hero_text: "Learn new skills in a day or less and earn a certificate."
+  hero_CTA: "View All Full Courses"
+  promo_label: "Featured"
+  promo_ID: "GYM-107"
+gym_shorts:
   format: "Gym Shorts"
   short_description: "Gym Shorts include a series of video lessons, a final exam, and a badge if you pass."
-tutorials:
+  hero_text: "Learn new skills in a few hours and earn a badge."
+  hero_CTA: "View All Gym Shorts"
+  promo_label: "Featured"
+  promo_ID: "GYM-017"
+take5_tutorials:
   format: "Take 5"
   short_description: "Take 5 tutorials are 5-minute video tutorials with easy-to-follow transcripts. No homework. No exam. Just free online learning."
+  hero_text: "Learn new skills with 5-minute tutorials."
+  hero_CTA: "View All Tutorials"
+  promo_label: "Featured"
+  promo_ID: "GYM-5052"
+collections:
+  format: "Collections"
+  hero_text: "Explore specific topics with free courses, tutorials, resources, and jobs."
+  hero_CTA: "View All Collections"
+  promo_label: "Featured"
+  promo_ID: "design-systems"
 
 about_section:
   summary: "Learn About Our Courses"
@@ -28,14 +46,14 @@ about_section:
     2:
       - label: "Video Lessons: 3–5 hours"
       - label: "Course Completion: 12–22 hours"
-  short_courses:
+  gym_shorts:
     1:
       - label: "Completely free self-paced online courses"
       - label: "Earn a Badge to share on your résumé and social media"
     2:
       - label: "Video Lessons: 1–2 hours"
       - label: "Course Completion: 1–5 hours"
-  tutorials:
+  take5_tutorials:
     1:
       - label: "Completely free online video tutorials"
       - label: "Learn new skills in 5 minutes"
